--- a/Kebne/Kebne/Base.lproj/Main.storyboard
+++ b/Kebne/Kebne/Base.lproj/Main.storyboard
@@ -17,32 +17,26 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V2T-Fb-YbS">
-                                <rect key="frame" x="16" y="293.5" width="343" height="80"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wcJ-Gm-thT" customClass="GIDSignInButton">
+                                <rect key="frame" x="29" y="298.5" width="317" height="70"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="80" id="Ae5-4t-nJL"/>
+                                    <constraint firstAttribute="height" constant="70" id="WiL-ga-7kG"/>
+                                    <constraint firstAttribute="width" constant="317" id="ced-Qx-ffn"/>
                                 </constraints>
-                                <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <state key="normal" title="SIGN IN WITH GOOGLE"/>
-                                <connections>
-                                    <action selector="didTapSignInButton" destination="BYZ-38-t0r" eventType="touchUpInside" id="l1U-G1-YhA"/>
-                                </connections>
-                            </button>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="V2T-Fb-YbS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="N1k-ez-1P6"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="V2T-Fb-YbS" secondAttribute="trailing" constant="16" id="VT0-Br-E0c"/>
-                            <constraint firstItem="V2T-Fb-YbS" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="WmW-nF-3Ui"/>
-                            <constraint firstItem="V2T-Fb-YbS" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="c65-IT-Q0z"/>
+                            <constraint firstItem="wcJ-Gm-thT" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="MXL-Bs-b72"/>
+                            <constraint firstItem="wcJ-Gm-thT" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="qiI-YQ-r8o"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="751" y="126"/>
+            <point key="canvasLocation" x="749.60000000000002" y="125.4872563718141"/>
         </scene>
         <!--Main View Controller-->
         <scene sceneID="RJE-7k-2v4">
@@ -52,12 +46,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello, main page!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dMm-e3-ZUt">
-                                <rect key="frame" x="121" y="79" width="133" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello, Kebne user!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dMm-e3-ZUt">
+                                <rect key="frame" x="117.5" y="79" width="140" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kRo-Tv-saj">
+                                <rect key="frame" x="152" y="337" width="71" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="SIGN OUT"/>
+                                <connections>
+                                    <action selector="didTapSignOut:" destination="3fu-tT-QZq" eventType="touchUpInside" id="j5A-v1-3FP"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -66,6 +68,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="QyP-03-Gzn"/>
                     </view>
+                    <connections>
+                        <outlet property="titleLabel" destination="dMm-e3-ZUt" id="MVb-NE-WXj"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hEH-tJ-Xsu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
