--- a/Kebne/Kebne/Base.lproj/LaunchScreen.storyboard
+++ b/Kebne/Kebne/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,7 +17,23 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Annapurna" translatesAutoresizingMaskIntoConstraints="NO" id="Xlh-Mk-DFD">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="KEBNE_logo_black" translatesAutoresizingMaskIntoConstraints="NO" id="CZD-Hj-xlz">
+                                <rect key="frame" x="112.5" y="258.5" width="150" height="150"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="CZD-Hj-xlz" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Hfu-Vy-Etb"/>
+                            <constraint firstItem="CZD-Hj-xlz" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="Hp7-U0-X95"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Xlh-Mk-DFD" secondAttribute="trailing" id="cqX-O7-kJv"/>
+                            <constraint firstAttribute="bottom" secondItem="Xlh-Mk-DFD" secondAttribute="bottom" id="czw-Je-0Zv"/>
+                            <constraint firstItem="Xlh-Mk-DFD" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="lI4-I4-ju3"/>
+                            <constraint firstItem="Xlh-Mk-DFD" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="tTP-tE-UVd"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
@@ -22,4 +42,8 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Annapurna" width="2426" height="1491"/>
+        <image name="KEBNE_logo_black" width="150" height="150"/>
+    </resources>
 </document>
