Abstracted Messaging, GIDSignIn and FirebaseApp used methods into separate protocols for each and added conformance for the mentioned classes. Updated dependent classes so that these classes are injected into them and wrote some more tests.

--- a/Kebne/Kebne/Base.lproj/Main.storyboard
+++ b/Kebne/Kebne/Base.lproj/Main.storyboard
@@ -109,7 +109,7 @@
                                     </label>
                                 </subviews>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2ly-8Y-97i">
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2ly-8Y-97i">
                                 <rect key="frame" x="115" y="391" width="145" height="30"/>
                                 <state key="normal" title="SEND NOTIFICATION"/>
                                 <connections>
